Add PathLens 2.0 backend and frontend directories

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ cache/
 *__pycache__/
 *.csv
 runs/
+backend/data/
+backend/venv/
+backend/__pycache__/
+backend/.env
+frontend/node_modules/
+frontend/dist/
+frontend/.env
