--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.graphml filter=lfs diff=lfs merge=lfs -text
 *.geojson filter=lfs diff=lfs merge=lfs -text
 cache/*.json filter=lfs diff=lfs merge=lfs -text
+data/processed/optimized_graph.graphml filter=lfs diff=lfs merge=lfs -text
