Added models. Completing merge with graph builder

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 cache/*.json filter=lfs diff=lfs merge=lfs -text
 data/processed/optimized_graph.graphml filter=lfs diff=lfs merge=lfs -text
 data/20citiesModel/* filter=lfs diff=lfs merge=lfs -text
+GraphBuilder/data/20citiesModel/model.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
