--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ data/20citiesModel/* filter=lfs diff=lfs merge=lfs -text
 GraphBuilder/data/20citiesModel/model.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
 data/analysis/baseline_nodes_with_scores.csv filter=lfs diff=lfs merge=lfs -text
 data/analysis/optimized_nodes_with_scores.csv filter=lfs diff=lfs merge=lfs -text
+data/landuse/* filter=lfs diff=lfs merge=lfs -text
