feat: Add satellite imagery to OSM-compatible graph conversion

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ cache/
 *.zip
 PAPER.md
 data/raw/extras
+GraphBuilder/venvg
+GraphBuilder/downloader/preferences.json
+GraphBuilder/downloader/sat_images
+GraphBuilder/custom_outputs
+GraphBuilder/downloader/metadata.json
+
